feat: implement base auth
